# kubectl-guardrails

./: .env.local  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  example-pod.yaml  first-run-notice.txt  guardrails.yaml  kind-cluster.yaml  on-create.sh  post-create.sh  post-start.sh
.github/workflows/: release.yaml
src/: main.rs
