[package]
name = "kubectl-guardrails"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
homedir = "0.2.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
text_io = "0.1.12"
